--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+
       - name: Pip Install
         run: pip3 install -r requirements.txt
 
