--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+
       - name: NPM install
         run: cd highlighter && npm i
 
