--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build
         run: |
-          timedatectl set-timezone "America/Los_Angeles"
+          export TZ="America/Los_Angeles"
           shopt -s globstar
           python3 -m md2html 404.md index.md blog/**/*.md
 
