Attempt to fix HTML for newest blog not present when deploying:
I added ".html" files to the gitignore file in 7bbf0365, and I feel like that
is causing the auto generated HTML files to not get copied over to the gh-pages
branch. I will remove these lines from the git ignore before pushing, and see
if that fixes things.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
           export TZ="America/Los_Angeles"
           shopt -s globstar
           python3 -m md2html 404.md index.md blog/**/*.md
+          sed -i "/html/d" .gitignore
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.3.0
