Add refurb to CI

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,6 @@ jobs:
 
       - name: Pytest
         run: pytest --cov=$PWD --cov-report term --cov-report html
+
+      - name: Refurb
+        run: refurb md2html test
