--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,19 +21,17 @@ jobs:
           pip install -r requirements.txt
           pip install -r dev-requirements.txt
 
-      - name: Flake8
-        run: flake8
+      - name: Ruff
+        run: make ruff
 
       - name: Mypy
-        run: |
-          mypy -p md2html
-          mypy gen_index.py
+        run: make mypy
 
       - name: Black
-        run: black md2html test --check --diff --color -l 79
+        run: make black
 
       - name: Pytest
-        run: pytest --cov=$PWD --cov-report term --cov-report html
+        run: make pytest
 
       - name: Refurb
-        run: refurb md2html test
+        run: make refurb
