--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,14 @@ allow_untyped_defs = true
 [tool.coverage.run]
 omit = ["md2html/__main__.py"]
 
+[tool.coverage.report]
+exclude_lines = [
+  "raise NotImplementedError\\(\\)",
+  "pragma: no cover",
+]
+skip_covered = true
+skip_empty = true
+
 [tool.pytest.ini_options]
 addopts = "--cov=md2html --cov-report=html --cov-report=term-missing --cov-fail-under=100"
 
