Attempt to fix LFS changes not working:
Because I am cloning with LFS, the files are being uploaded as raw LFS metadata
to the `gh-pages` branch. To fix this I uninstall git LFS before pushing, which
should hopefully push the raw files instead.

Also, I enabled the `single-commit` option when deploying since I don't really
need to have a history of the deployed file changes.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,15 @@ jobs:
           python3 -m md2html 404.md index.md blog/**/*.md
           sed -i "/html/d" .gitignore
 
+      # Fixes issue where LFS metadata files are pushed to gh-pages branch, not
+      # the files themselves.
+      - name: Disable LFS
+        run: |
+          rm -rf .gitattributes
+          git lfs uninstall
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4.4.1
         with:
           folder: .
+          single-commit: true
